# Elevator_Project

./: .gitignore
Elevator_Modell_Simulation/: Building.py  Main.py  README.md  demo.ipynb  elevator_env.py  pyproject.toml  run_gym.py
Elevator_Modell_Simulation/EpisodeStats/: all_episode_stats.txt
Elevator_Scanning/: Building.py  Main.py  README.md  pyproject.toml
Elevator_Scanning/EpisodeStats/: all_episode_stats.txt
Elevator_Scanning/tests/: test_dispatcher.py  test_elevator.py  test_models.py
