[project]
name = "elevator-modell-simulation"
version = "0.1.0"
description = "Elevator simulation using a trained MaskablePPO reinforcement learning model"
requires-python = ">=3.10"
dependencies = [
    "simpy>=4.0",
    "pygame>=2.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "stable-baselines3>=2.1",
    "sb3-contrib>=2.1",
    "gymnasium>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
